# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//engine/bazel:scql.bzl", "scql_cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "copy_to_proto_vistor",
    hdrs = ["copy_to_proto_vistor.h"],
    deps = [
        "@org_apache_arrow//:arrow",
    ],
)

cc_library(
    name = "logging",
    srcs = ["logging.cc"],
    hdrs = ["logging.h"],
    deps = [
        "@brpc//:butil",
        "@spdlog",
        "@yacl//yacl/base:exception",
    ],
)

cc_library(
    name = "prometheus_monitor",
    srcs = ["prometheus_monitor.cc"],
    hdrs = ["prometheus_monitor.h"],
    deps = [
        "@prometheus-cpp//core",
        "@yacl//yacl/base:exception",
    ],
)

cc_library(
    name = "tensor_util",
    srcs = ["tensor_util.cc"],
    hdrs = ["tensor_util.h"],
    deps = [
        ":copy_to_proto_vistor",
        "//engine/core:arrow_helper",
        "//engine/core:tensor",
        "//engine/util:spu_io",
        "//engine/util:time_util",
        "@yacl//yacl/base:exception",
    ],
)

cc_library(
    name = "stringify_visitor",
    srcs = ["stringify_visitor.cc"],
    hdrs = ["stringify_visitor.h"],
    deps = [
        "//engine/core:arrow_helper",
        "//engine/core:tensor",
        "//engine/core:tensor_constructor",
    ],
)

cc_library(
    name = "spu_io",
    srcs = ["spu_io.cc"],
    hdrs = ["spu_io.h"],
    deps = [
        ":ndarray_to_arrow",
        ":prefix_sum",
        "//engine/core:arrow_helper",
        "//engine/core:tensor",
        "//engine/core:tensor_constructor",
        "//engine/core:type",
        "@org_apache_arrow//:arrow",
        "@spulib//libspu/core:xt_helper",
        "@spulib//libspu/device:io",
        "@spulib//libspu/kernel/hal:constants",
        "@spulib//libspu/kernel/hal:public_helper",
        "@spulib//libspu/kernel/hlo:basic_binary",
        "@spulib//libspu/kernel/hlo:casting",
        "@spulib//libspu/kernel/hlo:geometrical",
    ],
)

cc_library(
    name = "ndarray_to_arrow",
    srcs = ["ndarray_to_arrow.cc"],
    hdrs = ["ndarray_to_arrow.h"],
    deps = [
        "//engine/core:arrow_helper",
        "//engine/core:type",
        "@org_apache_arrow//:arrow",
        "@spulib//libspu/core:ndarray_ref",
        "@spulib//libspu/core:xt_helper",
    ],
)

cc_library(
    name = "filepath_helper",
    srcs = ["filepath_helper.cc"],
    hdrs = ["filepath_helper.h"],
    deps = [
        "@abseil-cpp//absl/strings",
        "@boost.uuid",
        "@yacl//yacl/base:exception",
    ],
)

cc_library(
    name = "time_util",
    srcs = ["time_util.cc"],
    hdrs = ["time_util.h"],
    deps = [
        "//engine/core:primitive_builder",
        "//engine/core:tensor",
        "//engine/core:tensor_constructor",
        "@org_apache_arrow//:arrow",
        "@yacl//yacl/base:exception",
    ],
)

scql_cc_test(
    name = "filepath_helper_test",
    srcs = ["filepath_helper_test.cc"],
    linkopts = [
        "-lm",
    ],
    deps = [
        ":filepath_helper",
    ],
)

cc_library(
    name = "table_util",
    srcs = ["table_util.cc"],
    hdrs = ["table_util.h"],
    deps = [
        "//engine/framework:exec",
        "@yacl//yacl/base:exception",
    ],
)

cc_library(
    name = "communicate_helper",
    hdrs = ["communicate_helper.h"],
    deps = [
        "//engine/util:spu_io",
        "@msgpack-c//:msgpack",
    ],
)

cc_library(
    name = "context_util",
    srcs = ["context_util.cc"],
    hdrs = ["context_util.h"],
    deps = [
        ":tensor_util",
        "//engine/framework:exec",
        "//engine/util:spu_io",
    ],
)

cc_library(
    name = "prefix_sum",
    srcs = ["prefix_sum.cc"],
    hdrs = ["prefix_sum.h"],
    deps = [
        "@spulib//libspu/kernel/hlo:indexing",
    ],
)

cc_library(
    name = "progress_util",
    hdrs = ["progress_util.h"],
    deps = [
        "@fmt",
    ],
)

cc_library(
    name = "concurrent_queue",
    hdrs = ["concurrent_queue.h"],
)
