# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//engine/bazel:scql.bzl", "scql_cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "copy_to_proto_vistor",
    hdrs = ["copy_to_proto_vistor.h"],
    deps = [
        "@org_apache_arrow//:arrow",
    ],
)

cc_library(
    name = "logging",
    srcs = ["logging.cc"],
    hdrs = ["logging.h"],
    deps = [
        "@brpc//:butil",
        "@spdlog",
        "@yacl//yacl/base:exception",
    ],
)

cc_library(
    name = "prometheus_monitor",
    srcs = ["prometheus_monitor.cc"],
    hdrs = ["prometheus_monitor.h"],
    deps = [
        "@prometheus-cpp//core",
        "@yacl//yacl/base:exception",
    ],
)

cc_library(
    name = "tensor_util",
    srcs = ["tensor_util.cc"],
    hdrs = ["tensor_util.h"],
    deps = [
        ":copy_to_proto_vistor",
        "//engine/core:arrow_helper",
        "//engine/core:tensor",
        "//engine/util:spu_io",
        "//engine/util:time_util",
        "@yacl//yacl/base:exception",
    ],
)

cc_library(
    name = "stringifier",
    srcs = ["stringifier.cc"],
    hdrs = ["stringifier.h"],
    deps = [
        "//engine/core:arrow_helper",
        "//engine/core:tensor",
        "//engine/core:tensor_constructor",
    ],
)

scql_cc_test(
    name = "stringifier_test",
    srcs = ["stringifier_test.cc"],
    deps = [
        ":stringifier",
    ],
)

cc_library(
    name = "spu_io",
    srcs = ["spu_io.cc"],
    hdrs = ["spu_io.h"],
    deps = [
        ":ndarray_to_arrow",
        ":prefix_sum",
        "//engine/core:arrow_helper",
        "//engine/core:tensor",
        "//engine/core:tensor_constructor",
        "//engine/core:type",
        "@org_apache_arrow//:arrow",
        "@spulib//libspu/core:xt_helper",
        "@spulib//libspu/device:io",
        "@spulib//libspu/kernel/hal:constants",
        "@spulib//libspu/kernel/hal:public_helper",
        "@spulib//libspu/kernel/hlo:basic_binary",
        "@spulib//libspu/kernel/hlo:casting",
        "@spulib//libspu/kernel/hlo:geometrical",
    ],
)

cc_library(
    name = "ndarray_to_arrow",
    srcs = ["ndarray_to_arrow.cc"],
    hdrs = ["ndarray_to_arrow.h"],
    deps = [
        "//engine/core:arrow_helper",
        "//engine/core:type",
        "@org_apache_arrow//:arrow",
        "@spulib//libspu/core:ndarray_ref",
        "@spulib//libspu/core:xt_helper",
    ],
)

cc_library(
    name = "filepath_helper",
    srcs = ["filepath_helper.cc"],
    hdrs = ["filepath_helper.h"],
    deps = [
        "@abseil-cpp//absl/strings",
        "@boost.uuid",
        "@yacl//yacl/base:exception",
    ],
)

cc_library(
    name = "time_util",
    srcs = ["time_util.cc"],
    hdrs = ["time_util.h"],
    deps = [
        "//engine/core:primitive_builder",
        "//engine/core:tensor",
        "//engine/core:tensor_constructor",
        "@org_apache_arrow//:arrow",
        "@yacl//yacl/base:exception",
    ],
)

scql_cc_test(
    name = "filepath_helper_test",
    srcs = ["filepath_helper_test.cc"],
    linkopts = [
        "-lm",
    ],
    deps = [
        ":filepath_helper",
    ],
)

cc_library(
    name = "table_util",
    srcs = ["table_util.cc"],
    hdrs = ["table_util.h"],
    deps = [
        "//engine/framework:exec",
        "@yacl//yacl/base:exception",
    ],
)

cc_library(
    name = "communicate_helper",
    hdrs = ["communicate_helper.h"],
    deps = [
        "//engine/util:spu_io",
        "@msgpack-c//:msgpack",
    ],
)

cc_library(
    name = "context_util",
    srcs = ["context_util.cc"],
    hdrs = ["context_util.h"],
    deps = [
        ":tensor_util",
        "//engine/framework:exec",
        "//engine/util:spu_io",
    ],
)

cc_library(
    name = "prefix_sum",
    srcs = ["prefix_sum.cc"],
    hdrs = ["prefix_sum.h"],
    deps = [
        "@spulib//libspu/kernel/hlo:indexing",
    ],
)

cc_library(
    name = "progress_util",
    hdrs = ["progress_util.h"],
    deps = [
        "@fmt",
    ],
)

cc_library(
    name = "concurrent_queue",
    hdrs = ["concurrent_queue.h"],
)

cc_library(
    name = "datamesh_helper",
    srcs = ["datamesh_helper.cc"],
    hdrs = ["datamesh_helper.h"],
    deps = [
        "@grpc//:grpc++",
        "@kuscia//proto/api/v1alpha1/datamesh:domaindata_cpp_grpc",
        "@kuscia//proto/api/v1alpha1/datamesh:domaindatasource_cpp_grpc",
        "@yacl//yacl/base:exception",
    ],
)

scql_cc_test(
    name = "datamesh_helper_test",
    srcs = ["datamesh_helper_test.cc"],
    linkopts = [
        "-lm",
    ],
    deps = [
        ":datamesh_helper",
        "@grpc//:grpc++",
    ],
)

cc_library(
    name = "ssl_helper",
    srcs = ["ssl_helper.cc"],
    hdrs = ["ssl_helper.h"],
    deps = [
        "@brpc//:butil",
        "@grpc//:grpc++",
        "@yacl//yacl/base:exception",
    ],
)

scql_cc_test(
    name = "ssl_helper_test",
    srcs = ["ssl_helper_test.cc"],
    linkopts = [
        "-lm",
    ],
    deps = [
        ":ssl_helper",
    ],
)

cc_library(
    name = "upload_info_helper",
    srcs = ["upload_info_helper.cc"],
    hdrs = ["upload_info_helper.h"],
    deps = [
        "@dataproxy_sdk_cc//dataproxy_sdk:data_proxy_stream",
        "@dataproxy_sdk_cc//proto:data_proxy_cc_proto",
        "@org_apache_arrow//:arrow",
    ],
)

scql_cc_test(
    name = "upload_info_helper_test",
    srcs = ["upload_info_helper_test.cc"],
    linkopts = [
        "-lm",
    ],
    deps = [
        ":upload_info_helper",
    ],
)

cc_library(
    name = "trace_categories",
    srcs = ["trace_categories.cc"],
    hdrs = ["trace_categories.h"],
    deps = [
        "@perfetto",
        "@spdlog",
    ],
)

cc_library(
    name = "kpad_task_helper",
    srcs = ["kpad_task_helper.cc"],
    hdrs = ["kpad_task_helper.h"],
    deps = [
        "//api:engine_cc_proto",
        "//api:scql_task_cc_proto",
        "@brpc//:butil",
        "@com_google_protobuf//:json_util",
        "@spdlog",
        "@spulib//libspu/core:config",
        "@yacl//yacl/base:exception",
    ],
)

scql_cc_test(
    name = "kpad_task_helper_test",
    srcs = ["kpad_task_helper_test.cc"],
    linkopts = [
        "-lm",
    ],
    deps = [
        ":kpad_task_helper",
    ],
)
