# Copyright 2025 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Python bindings for SCQL Engine
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

package(default_visibility = ["//visibility:public"])

pybind_extension(
    name = "scql_engine",
    srcs = ["engine_bindings.cc"],
    # Use global-dynamic TLS model to avoid static TLS errors when loading this module
    # in Python interpreter with pybind11
    copts = ["-ftls-model=global-dynamic"],
    linkopts = select({
        "@platforms//os:linux": [
            "-static-libgcc",
            "-static-libstdc++",
            "-Wl,-Bstatic",
            "-lpthread",
            "-Wl,-Bdynamic",
            "-Wl,--exclude-libs,ALL",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//api:core_cc_proto",
        "//api:interpreter_cc_proto",
        "//api:status_cc_proto",
        "//engine/core:tensor",
        "//engine/datasource:datasource_adaptor_mgr",
        "//engine/datasource:embed_router",
        "//engine/datasource:router",
        "//engine/framework:exec",
        "//engine/framework:executor",
        "//engine/framework:session",
        "//engine/operator:all_ops_register",
        "//engine/services:pipeline",
        "//engine/services:run_plan_core",  # new independent RunPlanCore function
        "//engine/util:trace_categories",
        "@gflags",
        "@org_apache_arrow//:arrow",
        "@spulib//libspu/core:config",
        "@spulib//libspu/core:context",
        "@spulib//libspu/device:symbol_table",
        "@spulib//libspu/mpc:factory",
        "@yacl//yacl/link",
    ],
)
