# Copyright 2025 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "scql"
version = "0.1.1.dev20260104"
description = "Python binding for SCQL(Secure Collaborative Query Language)"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "SecretFlow Team", email = "secretflow-contact@service.alipay.com"},
]
keywords = ["scql", "secure-computation", "sql", "mppc", "privacy-preserving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Linux",
    "Topic :: Scientific/Engineering",
    "Topic :: Security :: Cryptography",
    "Topic :: Database",
]
requires-python = ">=3.11,<3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["scql*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
scql = ["*.so", "*.dll", "*.dylib"]
